--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@
 *.suo
 *.v1
 *.dll
+/Collections/.vs/Collections/FileContentIndex/*.vsidx
+/ConsoleToWebApi/.vs/ConsoleToWebApi/FileContentIndex/*.vsidx
+/EmployeeManagement/.vs/EmployeeManagement/FileContentIndex/*.vsidx
+*.vsidx
+*.lock
+*.exe
+*.props
+*.json
+*.cache
+*.pdb
+*.sln
+*.targets
+*.editorconfig
+*.BuildWithSkipAnalyzers
+.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+AbstractClasses.AssemblyInfo.cs
+AbstractClasses.csproj.FileListAbsolute.txt
+*.csproj
